--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li><a href="https://soliverson.github.io/wdd230/scoots/contact.html">Contact Us</a></li>
            </ul>
         </nav>
-        <main class="home">
+        <section class="home">
             <div class="slide-card">
             <div class="hero-message">
                 <h2 id="message">Rent Your Scooter Today</h2>
