--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                 <h3>Puerta Maya Terminal Location</h3>
                 <h4>1234 Ocean Ave, Puerta Maya</h4>
                 <h4>Cozumel, Mexico</h4>
+            </div>
         </div>
-
 
         <h2>Weather</h2>
         <div id="weather"></div>
 
- 
+        </section>
     </main>
     <footer>
         <p>Scoots Motor Scooter Rental Company &copy; <span id="current-year"></span></p>
