--- a/thankyou.html
+++ b/thankyou.html
@@ -45,7 +45,7 @@
                 <li><a href="https://soliverson.github.io/wdd230/scoots/contact.html">Contact Us</a></li>
            </ul>
         </nav>
-        <main class="home">
+        <section class="home">
             <h2>Thank you for reaching out.  Someone will reach out to you within 24 hours.</h2>
                 <picture>
                     <source srcset="images/thankyou.webp" media="(max-width: 600px)">
