--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <div class="slide-card">
             <div class="hero-message">
                 <h2 id="message">Rent Your Scooter Today</h2>
-                <button id="hero-button" type="button" name="hero-button" onclick="window.location.href = 'reservations.html'"><b>Click Here</b></button>  
+                <button id="hero-button" type="button" name="hero-button" onclick="window.location.href = 'reservations.html'"><b>Click Here</b></button>
+            </div>  
             </div>
             </div>
             <section>
