--- a/rentals.html
+++ b/rentals.html
@@ -46,6 +46,9 @@
            </ul>
         </nav>
         <section class="home">
+            <h2>Enter text here</h2>
+            <p>enter info here</p>
+        </section>
 
 
  
