Finished thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -52,7 +52,7 @@
                     <source srcset="images/thankyou.webp" media="(max-width: 2000px)">
                     <img id="hero-image" src="images/thankyou.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
                 </picture>      
-
+        </section>
 
  
     </main>
