--- a/reservations.html
+++ b/reservations.html
@@ -46,7 +46,9 @@
            </ul>
         </nav>
         <section class="home">
-
+            <h2>enter text here</h2>
+            <p>enter text here</p>
+        </section>
 
  
     </main>
