--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
            </ul>
         </nav>
-		<main class="contact-container">
+        <section class="home">
 
 			<div class="title">
 				<h1>Contact Us</h1>
