--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,8 @@
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41146.12810898645!2d-86.97833818596372!3d20.50069146830021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e59cceda3d799%3A0xbf8ea7e97451cfd8!2sCentro%2C%20San%20Miguel%20de%20Cozumel%2C%20Quintana%20Roo%2C%20Mexico!5e0!3m2!1sen!2sus!4v1712087885369!5m2!1sen!2sus"
 							loading="lazy" title="Scoots Cozumel Branch Maps"></iframe>
+					</div>
+				</div>		
 			</section>
             <br>
 
