--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,7 @@
 						</div>
                         <img src="images/logo.webp" alt="scoots logo">
 					</form>
+				</div>
 			</section>
 			<section class="contact-us">
 				<div class="contact-info">
@@ -120,7 +121,7 @@
 				</div>		
 			</section>
             <br>
-
+		</section>
 
  
     </main>
