--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
            </ul>
         </nav>
-        <section class="home">
+        <section class="contact-container">
 
 			<div class="title">
 				<h1>Contact Us</h1>
@@ -53,6 +53,7 @@
 			</div>
 			<section class="form-container">
 				<div class="form-cont">
+					<h2>Leave a Comment</h2>
 
 					<form class="form" action="thankyou.html" method="get" target="_blank">
 						<div id="error-message"></div>
