--- a/contact.html
+++ b/contact.html
@@ -39,10 +39,10 @@
             </div>
             <button id="menu"></button>
             <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="rentals.html">Rentals</a></li>
-                <li><a href="reservations.html">Reservations</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="https://soliverson.github.io/scoots/index.html">Home</a></li>
+                <li><a href="https://soliverson.github.io/scoots/rentals.html">Rentals</a></li>
+                <li><a href="https://soliverson.github.io/scoots/reservations.html">Reservations</a></li>
+                <li><a href="https://soliverson.github.io/scoots/contact.html">Contact Us</a></li>
            </ul>
         </nav>
         <section class="contact-container">
