--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <meta property="og:title" content="Scoots">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://soliverson.github.io/wdd230/scoots/images/logo.webp">
-    <meta property="og:url" content="https://soliverson.github.io/wdd230/scoots/index.html">
+    <meta property="og:image" content="https://soliverson.github.io/scoots/images/logo.webp">
+    <meta property="og:url" content="https://soliverson.github.io/scoots/index.html">
 
 
 </head>
@@ -40,9 +40,9 @@
             <button id="menu"></button>
             <ul class="navigation">
                 <li><a href="https://soliverson.github.io/scoots/index.html">Home</a></li>
-                <li><a href="https://soliverson.github.io/wdd230/scoots/rentals.html">Rentals</a></li>
-                <li><a href="https://soliverson.github.io/wdd230/scoots/reservations.html">Reservations</a></li>
-                <li><a href="https://soliverson.github.io/wdd230/scoots/contact.html">Contact Us</a></li>
+                <li><a href="https://soliverson.github.io/scoots/rentals.html">Rentals</a></li>
+                <li><a href="https://soliverson.github.io/scoots/reservations.html">Reservations</a></li>
+                <li><a href="https://soliverson.github.io/scoots/contact.html">Contact Us</a></li>
            </ul>
         </nav>
         <section class="home">
