--- a/reservations.html
+++ b/reservations.html
@@ -47,7 +47,7 @@
         </nav>
         <section class="home">
             <h1>Rental Services and Agreements</h1>
-            <h2>Accept the rules and have fun on your scooter adventure.            </h2>
+            <h2>Follow the rules and have fun on your scooter adventure.            </h2>
         </div>
 
         <section class="agreements">
@@ -93,7 +93,7 @@
                 </label>
 
                 <h3>Date and Period</h3>
-                <br>
+                
                 <label>Date from
                     <input type="date" name="date" id="date" title="only accept date format" required>
                 </label>
