--- a/reservations.html
+++ b/reservations.html
@@ -49,7 +49,7 @@
             <h1>Rental Services and Agreements</h1>
             <h2>Follow the rules and have fun on your scooter adventure. </h2>
 
-        <section class="agreements">
+        <div class="agreements">
             <ul>
                 <li class="agree">A $50 security deposit is required to confirm reservations.</li>
                 <li class="agree">A valid drivers license is required in hand at the time of rental.</li>
@@ -62,7 +62,7 @@
                 <li class="agree">Payment via Google Pay, Apple Pay, cash, credit card, debit card, or venmo.</li>
                 <li class="agree">Rentals may be returned to either physical location.</li>
             </ul>
-        </section>
+        </div>
 
         <div class="form-cont">
             <form class="form" action="thankyou.html" method="get" target="_blank">
@@ -117,11 +117,11 @@
                 </datalist>
 
                 <label>Rent Number of Vehicle
-                    <input type="number" name="amount" id="amount" placeholder="select the number of vehicles" required>
+                    <input type="number" name="vehiclenumber" id="vehiclenumber" placeholder="select the number of vehicles" required>
                 </label>
 
                 <label>Cruise Line (if applicable)
-                    <input type="text" name="amount" id="amount" placeholder="Cruise Line" required>
+                    <input type="text" name="cruiseline" id="cruiseline" placeholder="Cruise Line" required>
                 </label>
 
                 <label>Special Accommodations/Comments/Drop-Off Requests
