--- a/reservations.html
+++ b/reservations.html
@@ -98,7 +98,7 @@
                 </label>
 
                 <label>Date to
-                    <input type="date" name="date-to" id="date-to" pattern="[A-Za-z\- ]{7,}" title="only accept date format"
+                    <input type="date" name="date-to" id="date-to" title="only accept date format"
                         required>
                 </label>
 
