--- a/reservations.html
+++ b/reservations.html
@@ -46,10 +46,12 @@
            </ul>
         </nav>
         <section class="home">
-            <h2>Rental Services and Agreements</h2>
-            <h3>Follow the rules and have fun on your scooter adventure. </h3>
+            <h2>Make Your Reservation Now</h2>
+        <section class="contact-container">
 
         <div class="agreements">
+            <h2>Rental Services and Agreements</h2>
+            <h3>Follow the rules and have fun on your scooter adventure. </h3>
             <ul>
                 <li class="agree">A $50 security deposit is required to confirm reservations.</li>
                 <li class="agree">A valid drivers license is required in hand at the time of rental.</li>
