Finish Contact Page

--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
 			</section>
 			<section class="contact-us">
 				<div class="contact-info">
-					<h3 class="subtitle">Visit Our Offices</h3>
+					<h3 class="subtitle">Visit Our Offices</h3><br>
 					<h4><span class="strong">El Centro Cozumel Location:</span></h4>
 						<p>123 Port St, Playa del Carmen<br>
 						Cozumel, Mexico</p>
@@ -112,7 +112,7 @@
 			</section>
 
 			<section class="map">
-                <h2 class="subtitle">Find a Location!</h2>
+                <h2 class="subtitle">Find a Location!</h2><br>
 				<div class="iframe-cont">
 					<div class="gmap-canvas">
 						<iframe
@@ -138,9 +138,6 @@
         <p>Stacy Oliverson</p>
     </footer>
     
-    <script src="scripts/carousel.js"></script>
-    <script src="scripts/summary.js"></script>
-    <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
     <script src="scripts/currentyear.js"></script>
 </body>
