Finish Reservation Page

--- a/reservations.html
+++ b/reservations.html
@@ -46,7 +46,7 @@
            </ul>
         </nav>
         <section class="home">
-            <h2>Make Your Reservation Now</h2>
+            <br><h2>Make Your Reservation Now</h2>
         <section class="contact-container">
 
         <div class="agreements">
