Finished Reservation Page

--- a/reservations.html
+++ b/reservations.html
@@ -136,7 +136,7 @@
                         <button type="submit">COMPLETE RESERVATION</button>
                     </div>
                 </form>
-            </div>
+            </section>
             <br>
         </section>
     </main>
