--- a/reservations.html
+++ b/reservations.html
@@ -136,6 +136,7 @@
                         <button type="submit">COMPLETE RESERVATION</button>
                     </div>
                 </form>
+                </div>
             </section>
             <br>
         </section>
