--- a/rentals.html
+++ b/rentals.html
@@ -46,8 +46,30 @@
            </ul>
         </nav>
         <section class="home">
-            <h2>Enter text here</h2>
-            <p>enter info here</p>
+			<table style="border: 1px solid">
+				<thead>
+					<tr>
+						<th colspan="7"> PRICING LIST</th>
+					</tr>
+					<tr>
+						<th colspan="3"></th>
+						<th colspan="2">Reservation</th>
+						<th colspan="2">Walk-in</th>
+					</tr>
+					<tr>
+						<th>model</th>
+						<th>rental type</th>
+						<th>max persons</th>
+						<th>half day 3hs</th>
+						<th>full day</th>
+						<th>half day 3hs</th>
+						<th>full day</th>
+					</tr>
+				</thead>
+				<tbody>
+
+				</tbody>
+			</table>
         </section>
 
 
@@ -65,8 +87,7 @@
         <p>Stacy Oliverson</p>
     </footer>
     
-    <script src="scripts/carousel.js"></script>
-    <script src="scripts/summary.js"></script>
+    <script src="scripts/table.js"></script>
     <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
     <script src="scripts/currentyear.js"></script>
