Finished Rentals Page

--- a/rentals.html
+++ b/rentals.html
@@ -64,7 +64,7 @@
                   </tbody>
               </table>
             </div>	
-
+        </section>
     </main>
     <footer>
         <p>Scoots Motor Scooter Rental Company &copy; <span id="current-year"></span></p>
