--- a/index.html
+++ b/index.html
@@ -84,7 +84,30 @@
 
                 </div>
             </section>    
-    
+            <h2>Our Vehicles</h2>
+            <div class="vehicles">
+                <picture>
+                    <source srcset="images/atv.webp" media="(max-width: 600px)">
+                    <source srcset="images/atv.webp" media="(max-width: 2000px)">
+                    <img id="vehicle-image" src="images/atv.webp" alt="atv" loading="lazy" width="690" height="300">
+                </picture>  
+                <picture>
+                    <source srcset="images/jeep.webp" media="(max-width: 600px)">
+                    <source srcset="images/jeep.webp" media="(max-width: 2000px)">
+                    <img id="vehicle-image" src="images/jeep.webp" alt="jeep" loading="lazy" width="690" height="300">
+                </picture>  
+                <picture>
+                    <source srcset="images/scooter.webp" media="(max-width: 600px)">
+                    <source srcset="images/scooter.webp" media="(max-width: 2000px)">
+                    <img id="vehicle-image" src="images/scooter.webp" alt="scooterh" loading="lazy" width="690" height="300">
+                </picture>  
+            </div>
+                <button class="sec-button" href="rentals.html" target="_self">
+                    View Vehicle Information
+                </button>
+            
+
+
         <div class="info">
             <h2>Weather</h2>
             <div id="weather"></div>
