--- a/index.html
+++ b/index.html
@@ -102,11 +102,7 @@
                     <img id="vehicle-image" src="images/scooter.webp" alt="scooterh" loading="lazy" width="690" height="300">
                 </picture>  
             </div>
-                <button class="sec-button" href="rentals.html" target="_self">
-                    View Vehicle Information
-                </button>
-            
-
+                <button id="rent-button" type="button" name="rent-button" onclick="window.location.href = 'rentals.html'"><b>View Vehicle Information</b></button>          
 
         <div class="info">
             <h2>Weather</h2>
