--- a/index.html
+++ b/index.html
@@ -89,17 +89,17 @@
                 <picture>
                     <source srcset="images/atv.webp" media="(max-width: 600px)">
                     <source srcset="images/atv.webp" media="(max-width: 2000px)">
-                    <img id="vehicle-image" src="images/atv.webp" alt="atv" loading="lazy" width="690" height="300">
+                    <img id="atv-image" src="images/atv.webp" alt="atv" loading="lazy" width="690" height="300">
                 </picture>  
                 <picture>
                     <source srcset="images/jeep.webp" media="(max-width: 600px)">
                     <source srcset="images/jeep.webp" media="(max-width: 2000px)">
-                    <img id="vehicle-image" src="images/jeep.webp" alt="jeep" loading="lazy" width="690" height="300">
+                    <img id="jeep-image" src="images/jeep.webp" alt="jeep" loading="lazy" width="690" height="300">
                 </picture>  
                 <picture>
                     <source srcset="images/scooter.webp" media="(max-width: 600px)">
                     <source srcset="images/scooter.webp" media="(max-width: 2000px)">
-                    <img id="vehicle-image" src="images/scooter.webp" alt="scooterh" loading="lazy" width="690" height="300">
+                    <img id="scooter-image" src="images/scooter.webp" alt="scooterh" loading="lazy" width="690" height="300">
                 </picture>  
             </div>
                 <button id="rent-button" type="button" name="rent-button" onclick="window.location.href = 'rentals.html'"><b>View Vehicle Information</b></button>          
