Finish Home Page

--- a/index.html
+++ b/index.html
@@ -118,9 +118,6 @@
                     <source srcset="images/jeepcoz.webp" media="(max-width: 2000px)">
                     <img id="hero-image" src="images/jeepcoz.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
                 </picture>  
-
-
-				</div>
 			</section>
 			<section class="contact-us">
 				<div class="contact-info">
@@ -140,6 +137,7 @@
 
 			</section>
 
+        </section>
         </section>
     </main>
     <footer>
