--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@
             <h2>Weather</h2>
             <div id="weather"></div>
         </div>
-        <section class="contact-container">
+        <div class="contact-container">
 
 			<div class="title">
 			</div>
-			<section class="form-container">
+			<div class="form-container">
                 <picture>
                     <source srcset="images/jeepcoz.webp" media="(max-width: 600px)">
                     <source srcset="images/jeepcoz.webp" media="(max-width: 2000px)">
                     <img id="hero-image" src="images/jeepcoz.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
                 </picture>  
-			</section>
+			</div>
 			<section class="contact-us">
 				<div class="contact-info">
 					<h3 class="subtitle">Our Locations</h3><br>
@@ -137,7 +137,7 @@
 
 			</section>
 
-        </section>
+        </div>
         </section>
     </main>
     <footer>
