--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section class="home">
             <div class="slide-card">
             <div class="hero-message">
-                <h2 id="message">Rent Your Scooter Today</h2>
+                <h5 id="message">Rent Your Scooter Today</h5>
                 <button id="hero-button" type="button" name="hero-button" onclick="window.location.href = 'reservations.html'"><b>Click Here</b></button>  
             </div>
             </div>
@@ -112,12 +112,27 @@
 
 			<div class="title">
 			</div>
-			<div class="form-container">
+			<div class="pic-container">
                 <picture>
                     <source srcset="images/jeepcoz.webp" media="(max-width: 600px)">
                     <source srcset="images/jeepcoz.webp" media="(max-width: 2000px)">
                     <img id="hero-image" src="images/jeepcoz.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
-                </picture>  
+                </picture>
+                <p>"Renting a jeep from Scoots and exploring Cozumel was an absolute blast! 
+                    From the moment we hopped into our jeep, the adventure 
+                    began. Driving along the scenic coastal roads, with the salty 
+                    breeze kissing our faces, was an exhilarating experience. Whether it was cruising 
+                    through vibrant towns or venturing off the beaten path to find secluded 
+                    beaches, the thrill of exploration never ceased. The flexibility of having 
+                    our own vehicle made it easy to hop out and immerse ourselves in the 
+                    island's culture, sampling local cuisine and chatting with friendly 
+                    locals along the way. Plus, the rugged terrain capabilities of the jeep 
+                    added an extra element of excitement to our journey. Overall, renting a 
+                    jeep in from was the highlight of our trip, offering an unforgettable 
+                    adventure filled with endless possibilities and unforgettable memories."
+                <br>
+                    -Satisfied Customer
+            </p> 
 			</div>
 			<section class="contact-us">
 				<div class="contact-info">
@@ -131,6 +146,11 @@
 						<p>1234 Ocean Ave, Puerta Maya<br>
 						Cozumel, Mexico<br>
                         +52 (987) 555-9012</p>
+                    <picture>
+                        <source srcset="images/scooters.webp" media="(max-width: 600px)">
+                        <source srcset="images/scooters.webp" media="(max-width: 2000px)">
+                        <img id="hero-image" src="images/scooters.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
+                    </picture>
 
 				</div>
 
