Finish Home Page

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <picture>
                     <source srcset="images/scooter.webp" media="(max-width: 600px)">
                     <source srcset="images/scooter.webp" media="(max-width: 2000px)">
-                    <img id="scooter-image" src="images/scooter.webp" alt="scooterh" loading="lazy" width="690" height="300">
+                    <img id="scooter-image" src="images/scooter.webp" alt="scooter" loading="lazy" width="690" height="300">
                 </picture>  
             </div>
                 <button id="rent-button" type="button" name="rent-button" onclick="window.location.href = 'rentals.html'"><b>View Vehicle Information</b></button>          
@@ -116,7 +116,7 @@
                 <picture>
                     <source srcset="images/jeepcoz.webp" media="(max-width: 600px)">
                     <source srcset="images/jeepcoz.webp" media="(max-width: 2000px)">
-                    <img id="hero-image" src="images/jeepcoz.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
+                    <img id="jeep-image" src="images/jeepcoz.webp" alt="yellow jeep" loading="lazy" width="690" height="300">
                 </picture>
                 <p>"Renting a jeep from Scoots and exploring Cozumel was an absolute blast! 
                     From the moment we hopped into our jeep, the adventure 
@@ -149,7 +149,7 @@
                     <picture>
                         <source srcset="images/scooters.webp" media="(max-width: 600px)">
                         <source srcset="images/scooters.webp" media="(max-width: 2000px)">
-                        <img id="hero-image" src="images/scooters.webp" alt="Thank you note on beach" loading="lazy" width="690" height="300">
+                        <img id="hero-scooters" src="images/scooters.webp" alt="Scooters at Shop" loading="lazy" width="690" height="300">
                     </picture>
 
 				</div>
