Finish Home Page

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <picture>
                     <source srcset="images/jeep.webp" media="(max-width: 600px)">
                     <source srcset="images/jeep.webp" media="(max-width: 2000px)">
-                    <img id="jeep-image" src="images/jeep.webp" alt="jeep" loading="lazy" width="690" height="300">
+                    <img id="jeep1-image" src="images/jeep.webp" alt="jeep" loading="lazy" width="690" height="300">
                 </picture>  
                 <picture>
                     <source srcset="images/scooter.webp" media="(max-width: 600px)">
