--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
                     <img id="scooter-image" src="images/scooter.webp" alt="scooter" loading="lazy" width="690" height="300">
                 </picture>  
             </div>
-                <button id="rent-button" type="button" name="rent-button" onclick="window.location.href = 'rentals.html'"><b>View Vehicle Information</b></button>          
+            <div class="form-cont">
+            <div class="button">
+                <button class="submit" type="submit">VIEW VEHICLES</button>
+            </div>
+        </div>
 
         <div class="info">
             <h2>Weather</h2>
