--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="form-cont">
             <div class="button">
-                <button class="submit" type="submit">VIEW VEHICLES</button>
+                <button class="submit" type="submit" onclick="window.location.href = 'rentals.html'">VIEW AVAILABLE VEHICLES</button>
             </div>
         </div>
 
