--- a/reservations.html
+++ b/reservations.html
@@ -83,9 +83,7 @@
                     </label>
 
                     <label>Phone Number
-                        <input type="tel" id="mobile-number" name="mobile-number"
-                            pattern="\+[0-9]{1,3}\s[0-9]{1,4}\s[0-9]{1,2}\s[0-9]{4}-[0-9]{4}" placeholder="+1 555-123-4567"
-                            required>
+                        <input type="tel" name="mobileNumber" id="mobile" placeholder= "+1 555 345 6789" required>
                     </label>
 
                     <label>Email
