--- a/reservations.html
+++ b/reservations.html
@@ -121,7 +121,7 @@
                     </label>
 
                     <label>Cruise Line (if applicable)
-                        <input type="text" name="cruiseline" id="cruiseline" placeholder="Cruise Line" required>
+                        <input type="text" name="cruiseline" id="cruiseline" placeholder="Cruise Line">
                     </label>
 
                     <label>Special Accommodations/Comments/Drop-Off Requests
