--- a/reservations.html
+++ b/reservations.html
@@ -153,8 +153,7 @@
     </footer>
     
     <script src="scripts/carousel.js"></script>
-    <script src="scripts/summary.js"></script>
-    <script src="scripts/weather.js"></script>
+=   <script src="scripts/weather.js"></script>
     <script src="scripts/banner.js"></script>
     <script src="scripts/currentyear.js"></script>
 </body>
